# pandoc-numbering

./: .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  PKG-INFO  README.md  pandoc-numbering-sample.md  pandoc_numbering.py  pylintrc  pyproject.toml  setup.cfg  setup.py  tox.ini  whitelist.txt
.github/workflows/: python-package.yml  python-publish.yml
docs/: cite.rst  classes.rst  conf.py  default-sectioning.rst  example.rst  formatting.rst  index.rst  list-of-things.rst  numbering.rst  referencing.rst  requirements.txt  usage.rst
docs/images/: grammar.bnf  grammar.bnf~  hidden-sectioning.svg~  numbering-marker.svg~  pandoc-numbering-sample.epub  pandoc-numbering-sample.html  pandoc-numbering-sample.md  pandoc-numbering-sample.tex  pandoc-numbering-sample.txt  pandoc-numbering-sample.txt~  visible-sectioning.svg~
docs/images/version-2/: pandoc-numbering-sample.html  pandoc-numbering-sample.tex  pandoc-numbering-sample.txt
pandoc_numbering/: _main.py
src/pandoc_numbering/: __init__.py  _main.py
tests/: helper.py  test__identifier.py  test__remove_accents.py  test_double_sharp.py  test_headers.py  test_identifier.py  test_listings.py  test_listings_meta.py  test_numbering.py  test_numbering_meta.py  test_para.py  test_referencing.py  test_referencing_meta.py  test_removeAccents.py  test_term.py  test_toIdentifier.py
