[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "pandoc-numbering"
description = "A pandoc filter for automatic numbering"
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = {text = "BSD-3-Clause"}
license-files = {paths = ["LICENSE"]}
authors = [{name = "Christophe Demko", email = "chdemko@gmail.com"}]
maintainers = [{name = "Christophe Demko", email = "chdemko@gmail.com"}]
keywords = ["pandoc", "filters", "numbering"]
# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers = [
  # How mature is this project? Common values are
  # 3 - Alpha
  # 4 - Beta
  # 5 - Production/Stable
  "Development Status :: 5 - Production/Stable",
  # Specify the OS
  "Operating System :: OS Independent",
  # Indicate who your project is intended for
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Documentation",
  "Topic :: Text Processing :: Filters",
  # Specify the Python versions you support here. In particular, ensure
  # that you indicate whether you support Python 2, Python 3 or both.
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  # Natural language used
  "Natural Language :: English"
]
dependencies = [
  "panflute~=2.3"
]

[project.urls]
Homepage = "https://github.com/chdemko/pandoc-numbering"
Documentation = "https://pandoc-numbering.readthedocs.io/"
Repository = "https://github.com/chdemko/pandoc-numbering"
Issues = "https://github.com/chdemko/pandoc-numbering/issues"
Coverage = "https://coveralls.io/github/chdemko/pandoc-numbering"

[project.scripts]
pandoc-numbering = "pandoc_numbering:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel]
packages = ["src/pandoc_numbering"]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.10", "3.11", "3.12", "3.13", "3.14"]

[tool.hatch.envs.hatch-static-analysis]
dependencies = [
  # Types
  "types-PyYAML~=6.0",
  # Formatter
  "black[jupyter]~=26.3",
  # Style checkers
  "doc8~=2.0",
  "mypy~=1.10",
  "teyit~=0.4",
  "refurb~=2.3",
  "ruff~=0.15"
]

[tool.hatch.envs.hatch-static-analysis.scripts]
format-check = [
  "black --check --diff {args:src docs}",
  "doc8 -q {args:docs README.md} -e .rst -e .md"
]
format-fix = [
  "black {args:src docs}"
]
lint-check = [
  "refurb {args:src docs}",
  "ruff check {args:src docs}",
  "teyit --show-stats --fail-on-change {args:tests}"
]
lint-fix = [
  "ruff check --fix {args:src docs}"
]

[tool.hatch.envs.lint]
dependencies = [
  "slotscheck~=0.19",
  "pylint~=4.0"
]

[tool.hatch.envs.lint.scripts]
check = [
  "slotscheck {args:src}",
  "pylint {args:src}"
]

[tool.hatch.envs.docs]
dependencies = [
  "myst-parser~=5.0",
  "Sphinx~=9.1",
  "sphinx-rtd-theme~=3.1",
  "sphinx-copybutton~=0.5"
]

[tool.hatch.envs.docs.scripts]
build = "sphinx-build docs {args:build/sphinx/html}"

[tool.pytest.ini_options]
consider_namespace_packages = true
pythonpath = ["src"]

[tool.black]
target-version = ["py310", "py311", "py312"]

[tool.ruff]
# Allow lines to be as long as 88.
line-length = 88
target-version = "py310"

[tool.mypy]
ignore_missing_imports = true
no_implicit_optional = true
# equivalent to --strict option
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
extra_checks = true
mypy_path = "src"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "panflute.*"

[tool.pydocstyle]
convention = "numpy"

[tool.coverage.run]
source = ["src"]
